# CyberBio3Child

./: Bot.cpp  Bot.h  BotNeuralNet.cpp  BotNeuralNet.h  CMakeLists.txt  Field.cpp  Field.h  Main.cpp  Main.h  MyTypes.h  NeuralNetRenderer.cpp  NeuralNetRenderer.h  Neuron.cpp  Neuron.h  Object.cpp  Object.h  Settings.h  Systems.h
